--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -24,7 +24,17 @@
             </div>
             <div class="col-2 mt-2 mb-2">
               <div class="restaurant-dashboard-title">RATING</div>
-              <div class="restaurant-dashboard-content">4.<%= rand(1..9) %></div>
+              <% reviews = @reviews.where(restaurant_id: restaurant) %>
+              <% if reviews.present? %>
+                <% rating_total = 0 %>
+                <% reviews.each do |review| %>
+                  <% review_rating = (review.authenticity.to_f + review.value.to_f) / 2 %>
+                  <% rating_total += review_rating %>
+                <% end %>
+              <div class="restaurant-dashboard-content"><%= (rating_total / reviews.count).round(1) %></div>
+              <% else %>
+              <div class="restaurant-dashboard-content">No Reviews</div>
+              <% end %>
             </div>
             <div class="col-2 mt-2 mb-2">
               <div class="restaurant-dashboard-title">HOURS</div>
